packages/parser/test/tokenizer/E0010-point-eof.txt
0.
===== err =====
anonymous:1:1: SyntaxError: E0010 - Invalid float literal
1 | 0.
  | ~~
